--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/Woodchester_16-12-19/Woodchester_16-12-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Woodchester_16-12-19/Woodchester_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Our new research from Woodchester Park (17-12-19)<br><br>
+                            A post how we used genomics to track transmission of Mycobacterium bovis within and between cattle and badgers in Woodchester Park.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/tanglePlot_08-12-19/tanglePlot_08-12-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/tanglePlot_08-12-19/tanglePlot_Thumbnail.png" class="thumbnail">
