--- a/Outputs.html
+++ b/Outputs.html
@@ -43,9 +43,10 @@
             <h1>Articles</h1>
 
             <p>
+                2019 - <a href="https://elifesciences.org/articles/45833">Combining genomics and epidemiology to analyse bi-directional transmission of Mycobacterium bovis in a multi-host system</a>
+                <br><br>
                 2019 - <a href="https://royalsocietypublishing.org/doi/10.1098/rstb.2018.0264">Analysing livestock network data for infectious disease control: an argument for routine data collection in emerging economies</a>
                 <br><br>
-
                 2019 - <a href="https://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000245?originator=authorOffprint&identity=171279&timestamp=20200121152805&signature=4d39664c2c9b68870a99f0ed34f58489">HomoplasyFinder: a simple tool to identify homoplasies on a phylogeny</a>
                 <br><br>
                 2019 - <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.15061#.XHe9ERs9Q1Q.twitter">Disease management at the wildlife‐livestock interface: using whole‐genome sequencing to study the role of elk in Mycobacterium bovis transmission in Michigan, USA</a>
@@ -54,7 +55,7 @@
                 <br><br>
                 2017 - <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5314462/">Using whole genome sequencing to investigate transmission in a multi-host system: bovine Tuberculosis in New Zealand</a>
                 <br><br>
-                2016 - <a href="http://theses.gla.ac.uk/8254/">My PhD thesis! - available soon...</a>
+                2016 - <a href="http://theses.gla.ac.uk/8254/">My PhD thesis! - Using whole genome sequencing to investigate the inter-species transmission dynamics of Mycobacterium bovis</a>
                 <br><br>
                 2015 - <a href="http://www.sciencedirect.com/science/article/pii/S1090023315003615">A review of the book: "Bioinformatics and Data Analysis in Microbiology"</a>
 
